Generate schema from jpa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ logging.level.sql=debug
 spring.data.rest.base-path=data
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+management.endpoints.web.exposure.include=*
