--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 logging.level.sql=debug
 spring.data.rest.base-path=data
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 management.endpoints.web.exposure.include=*
-spring.flyway.enabled=false
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/eav
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.open-in-view=true
+spring.liquibase.enabled=false
+#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
