--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.sql=debug
 spring.data.rest.base-path=data
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 management.endpoints.web.exposure.include=*
 spring.datasource.username=postgres
 spring.datasource.password=postgres
